--- a/index.html
+++ b/index.html
@@ -659,7 +659,7 @@ rapidly evolving business landscape.
 			
 			
 	<div class="et_pb_text_inner">
-		<div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="d571ac4f-af63-4f1d-9bb7-c1a23c91a0ce" data-share-badge-host="https://www.credly.com"></div>
+		<span ><img  alt="" title="ACC Badge" width="20px" height= "20px" src="images/acc_logo.jpeg" data-recalc-dims="1"></span>
 		<a href="https://instagram.com/panktikillawala_coaching" class="fa fa-instagram" style="color:black"></a>
 		<a href="https://uk.linkedin.com/in/pankti-killawala-fia-abbba333" style="color:black" class="fa fa-linkedin"></a>
 		<p style="color:black">Pankti Killawala Coaching ©2023	</p>
