--- a/about.html
+++ b/about.html
@@ -425,6 +425,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 	
 	
 <div class="et_pb_text_inner">
+	<span ><img  alt="" title="ACC Badge" width="20px" height= "20px" src="images/acc_logo.jpeg" data-recalc-dims="1"></span>
 <a href="https://instagram.com/panktikillawala_coaching" class="fa fa-instagram" style="color:black"></a>
 <a href="https://uk.linkedin.com/in/pankti-killawala-fia-abbba333" style="color:black" class="fa fa-linkedin"></a>
 <p style="color:black">Pankti Killawala Coaching ©2023	</p>
