--- a/index.html
+++ b/index.html
@@ -148,12 +148,12 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 					<span class="et_close_search_field"></span>
 				</div>
 			</div>
-			<div id="wrapper">
-				<p class="f1" style=" font-size:75px;padding-top:30px;font-family: 'Chalisa Oktavia', cursive; ">Pankti Parikh Killawala</p>
+			<!-- <div id="wrapper">
+				<p class="f1" style=" font-size:55px;padding-top:20px;font-family: 'Chalisa Oktavia', cursive; ">Pankti Parikh Killawala</p>
 				<p class='s2' style=" font-size: 34px;">Coach for high achievers and perfectionists
 				</p>
 				&nbsp;
-			  </div>
+			  </div> -->
 		</header> <!-- #main-header -->
 		
 		<div id="et-main-area">
